fixed an icon alignment issue in the nav tiles

--- a/src/components/Homepage/homepage.scss
+++ b/src/components/Homepage/homepage.scss
@@ -183,7 +183,7 @@ aside h4 {
 
 .homepage--tile-subheader-wrapper {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: space-between;
 }
 
