--- a/src/components/NavTile/nav-tile.scss
+++ b/src/components/NavTile/nav-tile.scss
@@ -36,7 +36,7 @@
 
 .overviewpage--tile-subheader-wrapper {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: space-between;
 }
 
